--- a/package.json
+++ b/package.json
@@ -19,13 +19,25 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --max-warnings=0",
-    "lint:fix": "npm run lint --fix"
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+  },
+  "devDependencies": {
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^11.2.6",
+    "prettier": "^2.4.1"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "plugin:json/recommended"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -40,23 +52,15 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-react": "^7.29.4",
-    "husky": "^8.0.1",
-    "lint-staged": "^12.4.1",
-    "prettier-eslint": "^15.0.0",
-    "prettier-eslint-cli": "^6.0.1"
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "{src/**/*.{js,json}": [
-      "prettier-eslint --write",
-      "npm run lint"
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "npm run format",
+      "npm run lint:fix"
     ]
   }
 }
