--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-bootstrap-grid": "^3.1.2",
