--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-query": "^3.39.0",
@@ -19,6 +20,7 @@
     "react-scripts": "5.0.1",
     "styled-bootstrap-grid": "^3.1.2",
     "styled-components": "^5.3.5",
+    "use-query-params": "^1.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
