--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.3",
+    "i18next": "^21.8.14",
     "leaflet": "^1.8.0",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^11.18.1",
     "react-leaflet": "^4.0.1",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
