--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@mui/material": "^5.8.1",
     "@styled-icons/bootstrap": "^10.34.0",
     "@styled-icons/boxicons-solid": "^10.38.0",
+    "@styled-icons/fluentui-system-filled": "^10.35.0",
+    "@styled-icons/fluentui-system-regular": "^10.35.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
