--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "gh-pages": "^4.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1"
