--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "iq-trans-dashboard",
   "version": "0.1.0",
+  "homepage": "https://sxmxn.github.io/master-thesis",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
