--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iq-trans-dashboard",
   "version": "0.1.0",
   "homepage": "https://sxmxn.github.io/master-thesis",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
