--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iq-trans-dashboard",
   "version": "0.1.0",
-  "homepage": "https://sxmxn.github.io/master-thesis",
+  "homepage": ".",
   "proxy": "http://127.0.0.1:3001",
   "private": true,
   "dependencies": {
